ISPN-9846 Ensure Backwards Compatibility with Persistence SPI changes
Rename persistence.spi.MarshalledEntry to MarshallableEntry

MarshalledEntry and MarshalledEntryFactory methods in the spi deprecated
and default methods added for backwards-compatibility.